--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "react": "^16.4.1",
+    "react-data-export": "^0.5.0",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "xlsx": "^0.14.1"
   },
   "scripts": {
     "start": "NODE_PATH=./src react-scripts start",
